--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Shinka</string>
+    <string name="create">create a folder or a file</string>
+    <string name="content_desc_settings">Settings</string>
+    <string name="content_desc_select">Select\n</string>
+    <string name="content_desc_forward">Forward</string>
+    <string name="content_desc_back">Back</string>
 
 </resources>
